force-app/main/default/objects/DripEmailTemplate__c/DripEmailTemplate__c.object-meta.xml
<CustomObject>
    <label>Drip Email Template</label>
    <nameField>
        <label>Drip Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drip Email Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>