force-app/main/default/objects/DripEmailTemplate__c/fields/DaysFromStart__c.field-meta.xml
<CustomField>
    <fullName>DaysFromStart__c</fullName>
    <label>Days After Start Date</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>