force-app/main/default/objects/DripEmailTemplate__c/fields/DripCampaignTemplate__c.field-meta.xml
<CustomField>
    <fullName>DripCampaignTemplate__c</fullName>
    <label>Drip Campaign Template</label>
    <referenceTo>DripCampaignTemplate__c</referenceTo>
    <relationshipLabel>Drip Email Templates</relationshipLabel>
    <relationshipName>DripEmailTemplates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>