force-app/main/default/objects/DripEmailTemplate__c/fields/SendDay__c.field-meta.xml
<CustomField>
    <fullName>SendDay__c</fullName>
    <label>Send Day</label>
    <type>Date</type>
</CustomField>